# egui_play

./: Cargo.toml
src/: app.rs  lib.rs  main.rs
